last coupen ipdate

--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -40,7 +40,7 @@
     </a>
   </li>
 
-  <li class="menu-item ">
+  <li class="menu-item active">
     <a href="/admin/banner" class="menu-link">
       <i class="menu-icon tf-icons bx bx-collection"></i>
       <div data-i18n="Analytics">Banner</div>
